feat: support listing workspaces as member
